<resources>
    <string name="app_name">BookDonation</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginhere">Loginhere</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="usn">USN</string>
    <string name="book_name">Book Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="semester">Semester</string>
    <string name="donate">Donate</string>
    <string name="subject">Subject</string>
    <string name="book_type">Book Type</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="regno">USN</string>
    <string name="books_available">Books Available</string>
    <string name="id">Id</string>
    <string name="bookname">Bookname</string>
    <string name="mobile">Mobile</string>
    <string name="request">Request</string>
    <string name="refresh">Refresh</string>

</resources>